--- a/React_Toast/vite-project/src/App.css
+++ b/React_Toast/vite-project/src/App.css
@@ -1,42 +1,32 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.toast-container {
+    position: fixed;
+    top: 0.5rem;
+    right: 0.5rem
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.toast {
+    background-color: green;
+    width: 12rem;
+    padding: 1rem;
+    color: white;
+    border-radius: 0.5rem;
+    position: relative;
+    animation: slideIn 1s 1;
+
+    span {
+        position: absolute;
+        right: 1.5rem;
+        font-size: 1rem;
+        cursor: pointer;
+    }
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@keyframes slideIn {
+    from {
+        transform: translateX(100%);
+    }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+    to {
+        transform: translateX(0);
+    }
 }
